--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html data-wf-domain="www.themichaelji.com" data-wf-page="5bc3c3ab9f9d5cc4286ef413" data-wf-site="5bc3c3ab9f9d5c8b736ef412">
     <head>
         <meta charset="utf-8"/>
-        <title>Michael Ji &#x27;s</title>
+        <title>Hong Anh &#x27;s</title>
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <link href="https://uploads-ssl.webflow.com/5bc3c3ab9f9d5c8b736ef412/css/michael-jis.webflow.9ed18e808.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -38,7 +38,7 @@
                 <h1 data-w-id="4a02e107-91f4-6951-acaa-6989506d07b8" style="-webkit-transform:translate3d(0, 15VH, 0) scale3d(0.23, 0.23, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 15VH, 0) scale3d(0.23, 0.23, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 15VH, 0) scale3d(0.23, 0.23, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 15VH, 0) scale3d(0.23, 0.23, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="preload-heading _2">
                     <strong>
                         Welcome to <br/>
-                        Michael &#x27;s portfolio.<br/>Hope you enjoy.
+                        Hong Anh &#x27;s portfolio.<br/> <3.
                     </strong>
                 </h1>
             </div>
@@ -71,8 +71,8 @@
             <div id="AboutSection" data-w-id="849226f0-4462-4d5b-5288-21b5cc4d22fd" class="container-5 w-container">
                 <div data-w-id="02c5f938-d88c-29ce-09a8-6bbe447e82fb" class="introbox">
                     <h1 class="introtitle">
-                        Discover People &#x27;s True Desires<br/>
-                        Apply Psychological Strategies<br/>Create Smart Products + UX Designs
+                        Coordinated Marketing for Data-Driven Success<br/>
+                        Boosting Digital Media Engagement <br/>Enhanced Brand Visibility Across Platforms
                     </h1>
                     <p class="introdes phone">
                         Hello! My name is Michael Ji, a UX designer at Brex. Previously, I worked at Facebook and Google.<br/>I love thinking and designing with challenges beyond the existing rules. Thus, I &#x27;ve been so interested in new technologies and designs, such as VR/AR and flexible wearable devices. Meanwhile, I &#x27;ve been photographing for three years. I love driving down towards an abstract destination with friends, stopping by anywhere that &quot;worths &quot;a stop, and waiting to capture the scene at a perfect moment.
