--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
         <title>Hong Anh &#x27;s</title>
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <link href="https://uploads-ssl.webflow.com/5bc3c3ab9f9d5c8b736ef412/css/michael-jis.webflow.9ed18e808.css" rel="stylesheet" type="text/css"/>
+        <link href="michael-jis.webflow.9ed18e808.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
         <script type="text/javascript">
             WebFont.load({
@@ -71,7 +71,7 @@
             <div id="AboutSection" data-w-id="849226f0-4462-4d5b-5288-21b5cc4d22fd" class="container-5 w-container">
                 <div data-w-id="02c5f938-d88c-29ce-09a8-6bbe447e82fb" class="introbox">
                     <h1 class="introtitle">
-                        Coordinated Marketing for Data-Driven Success<br/>
+                        Coordinated Marketing Strategy <br/>
                         Boosting Digital Media Engagement <br/>Enhanced Brand Visibility Across Platforms
                     </h1>
                     <p class="introdes phone">
