--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
         <title>Hong Anh &#x27;s</title>
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <link href="michael-jis.webflow.9ed18e808.css" rel="stylesheet" type="text/css"/>
+        <link href="style.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
         <script type="text/javascript">
             WebFont.load({
