--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         Boosting Digital Media Engagement <br/>Enhanced Brand Visibility Across Platforms
                     </h1>
                     <p class="introdes phone">
-                        Hello! My name is Michael Ji, a UX designer at Brex. Previously, I worked at Facebook and Google.<br/>I love thinking and designing with challenges beyond the existing rules. Thus, I &#x27;ve been so interested in new technologies and designs, such as VR/AR and flexible wearable devices. Meanwhile, I &#x27;ve been photographing for three years. I love driving down towards an abstract destination with friends, stopping by anywhere that &quot;worths &quot;a stop, and waiting to capture the scene at a perfect moment.
+                        Hello! My name is Hong Anh Pham, a dedicated marketing specialist with a background in digital marketing and business analytics. <br/>I enjoy tackling challenges that push the boundaries of traditional marketing, always eager to explore new strategies for enhancing brand visibility and media engagement. Outside of work, I have a passion for traveling and discovering new cultures, which inspires my approach to marketing. Whether it's crafting innovative campaigns or planning my next adventure, I'm always seeking new ways to grow and connect.
                     </p>
                 </div>
                 <div data-w-id="f070d66d-c5c4-33d2-3857-cf1a844d1c2c" class="imageblock"></div>
