--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 ("ontouchstart"in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
             }(window, document);
         </script>
-        <link href="https://uploads-ssl.webflow.com/5bc3c3ab9f9d5c8b736ef412/5c010156e3ef7c45e1e36fab_web-r.png" rel="shortcut icon" type="image/x-icon"/>
-        <link href="https://uploads-ssl.webflow.com/5bc3c3ab9f9d5c8b736ef412/5be33dd13a30ff31c7c63d99_website%20logo%20256.jpg" rel="apple-touch-icon"/>
+        <link href="logo.png" rel="shortcut icon" type="image/x-icon"/>
+        <link href="logo.png" rel="apple-touch-icon"/>
     </head>
     <body class="body-2">
         <div data-w-id="aca4541a-9f6b-f62d-5ea3-3c60ac90de15" class="project-load-home-animation _1"></div>
