--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </h1>
             <div data-w-id="aabdcf8e-3310-c546-3cfd-99a42bf3f073" class="container-6 w-container">
                 <div data-w-id="c718fe9b-260a-6374-c7a4-db943eef48cf" class="project _3"></div>
-                <a data-w-id="648ec8d6-3a37-bfd1-c1d6-b94450a09893" href="/walk" class="projectblocklink _1 w-inline-block">
+                <a data-w-id="648ec8d6-3a37-bfd1-c1d6-b94450a09893" href="/portfoliohonganh01/walk" class="projectblocklink _1 w-inline-block">
                     <div class="blockdesbox _1">
                         <h1 class="boxtitle _1">Walk</h1>
                         <p class="paragraph-2">An interactive, strongly self-motivating mobile pedometer application featured a hyper-localized online monster-chase game.</p>
