--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div data-w-id="f8fe8ca1-ad52-829f-378b-be8f75d8f3f6" class="buttonbox">
             <a href="#AboutSection" class="abouta w-button">ABOUT ME</a>
             <a href="#ProjectSession" data-w-id="ce431b28-d129-b957-1c57-2072dad086ee" class="abouta _2 w-button">PROJECTS</a>
-            <a href="https://uploads-ssl.webflow.com/5bc3c3ab9f9d5c8b736ef412/629012c61d087578822a7790_resume%202022%20Apr.pdf" data-w-id="c010804a-abd3-275b-83cc-a33d8213394f" target="_blank" class="abouta _3 w-button">RESUME</a>
+            <a href="resume.jpg" data-w-id="c010804a-abd3-275b-83cc-a33d8213394f" target="_blank" class="abouta _3 w-button">RESUME</a>
         </div>
         <div id="homeTop" class="introsession w-clearfix wf-section">
             <h1 class="heading-2">
