--- a/walk/index.html
+++ b/walk/index.html
@@ -11,6 +11,18 @@
             margin: 0;
             padding: 20px;
             display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .title {
+            font-size: 48px;
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 40px;
+            text-align: center;
+        }
+        .projects-container {
+            display: flex;
             flex-wrap: wrap;
             justify-content: center;
         }
@@ -47,22 +59,26 @@
     </style>
 </head>
 <body>
-    <div class="project">
-        <div class="project-placeholder"></div>
-        <div class="project-title">Project 1</div>
-        <div class="project-description">This is a brief description of Project 1.</div>
-    </div>
+    <div class="title">Project Placeholders</div>
 
-    <div class="project">
-        <div class="project-placeholder"></div>
-        <div class="project-title">Project 2</div>
-        <div class="project-description">This is a brief description of Project 1.</div>
-    </div>
+    <div class="projects-container">
+        <div class="project">
+            <div class="project-placeholder"></div>
+            <div class="project-title">Project 1</div>
+            <div class="project-description">This is a brief description of Project 1.</div>
+        </div>
 
-    <div class="project">
-        <div class="project-placeholder"></div>
-        <div class="project-title">Project 3</div>
-        <div class="project-description">This is a brief description of Project 1.</div>
+        <div class="project">
+            <div class="project-placeholder"></div>
+            <div class="project-title">Project 2</div>
+            <div class="project-description">This is a brief description of Project 2.</div>
+        </div>
+
+        <div class="project">
+            <div class="project-placeholder"></div>
+            <div class="project-title">Project 3</div>
+            <div class="project-description">This is a brief description of Project 3.</div>
+        </div>
     </div>
 </body>
 </html>
